--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -5,10 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -42,7 +41,7 @@
     <!--Mail Settings Ends-->
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0">
+    <compilation targetFramework="4.0" debug="true">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
@@ -57,6 +56,11 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <customErrors mode="Off" />
+    <trust level="Full" />
+    <!--<sessionState mode="InProc" timeout="120" cookieless="false" />-->
+    <!--<sessionState mode="SQLServer" timeout="120" allowCustomSqlDatabase="true" sqlConnectionString="Data Source=SANDIP-PC\DIGISQL2012;Initial Catalog=InplayServerCopy;User ID=sa;Password=san9903049505;" cookieless="false" />-->
+    <sessionState mode="SQLServer" timeout="120" allowCustomSqlDatabase="true" sqlConnectionString="Data Source=SANDIP-PC\DIGISQL2012;Initial Catalog=InplayBet;User ID=sa;Password=san9903049505;" cookieless="false" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
@@ -104,10 +108,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayServerCopy;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayServerCopy;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SKYDELL-12-19\SQLSERVER2008;initial catalog=InplayBet;persist security info=True;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=79.170.40.194;initial catalog=InplayBet;persist security info=True;user id=mssql2_inplay_1;password=inplay;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
-
 </configuration>
