--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -29,16 +29,24 @@
     <add key="DefaultWiningBetPegSize" value="30" />
     <add key="DefaultWiningMemberPegSize" value="10" />
     <add key="DefaultLeaderboardPegSize" value="100" />
+    <add key="EnableMailing" value="false" />
     <!--Mail Settings Starts-->
     <add key="MAIL_ENABLE" value="true" />
-    <add key="MAIL_SERVER" value="smtp.gmail.com" />
+    <add key="MAIL_SERVER" value="mail.inplay20.com" />
     <add key="MAIL_SERVER_PORT" value="587" />
-    <add key="MAIL_SERVER_SSL" value="true" />
-    <add key="MAIL_SENDER_UID" value="inplayhelp@gmail.com" />
-    <add key="MAIL_SENDER_PWD" value="gTstzFz9me6G@" />
+    <add key="MAIL_SERVER_SSL" value="false" />
+    <add key="MAIL_SENDER_UID" value="admin@inplay20.com" />
+    <add key="MAIL_SENDER_PWD" value="inplay@admin" />
     <add key="MAIL_SENDER_FROM" value="Inplay20 Team" />
     <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.com" />
     <!--Mail Settings Ends-->
+    <!--Mass Mailing Service Settings Starts-->
+    <add key="MAIL_API_URL" value="https://api.mailgun.net/v2"/>
+    <add key="MAIL_API_KEY" value="key-340556852da13f20f62699c1082781cd"/>
+    <add key="MAIL_API_DOMAIN" value="sandboxaa7e13841b284969a8ae1cdf0d6392f9.mailgun.org"/>
+    <add key="MAIL_API_SENDER_FROM" value="Excited User" />
+    <add key="MAIL_API_SENDER_RECIPIENT" value="mailgun@sandboxaa7e13841b284969a8ae1cdf0d6392f9.mailgun.org" />
+    <!--Mass Mailing Service Settings Ends-->
   </appSettings>
   <system.web>
     <compilation targetFramework="4.0" debug="true">
@@ -108,8 +116,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayServerCopy;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayServerCopy;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SKYDELL-12-19\SQLSERVER2008;initial catalog=InplayBet;persist security info=True;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=79.170.40.194;initial catalog=InplayBet;persist security info=True;user id=mssql2_inplay_1;password=inplay;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
