--- a/InplayBet.Web/packages.config
+++ b/InplayBet.Web/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="morelinq" version="2.0.0-alpha01" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
+  <package id="RestSharp" version="105.1.0" targetFramework="net40" />
   <package id="SimpleInjector" version="2.7.2" targetFramework="net40" />
   <package id="SimpleInjector.Integration.Web" version="2.7.2" targetFramework="net40" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="2.7.2" targetFramework="net40" />
