--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -41,11 +41,11 @@
     <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.com" />
     <!--Mail Settings Ends-->
     <!--Mass Mailing Service Settings Starts-->
-    <add key="MAIL_API_URL" value="https://api.mailgun.net/v2"/>
-    <add key="MAIL_API_KEY" value="key-340556852da13f20f62699c1082781cd"/>
-    <add key="MAIL_API_DOMAIN" value="sandboxaa7e13841b284969a8ae1cdf0d6392f9.mailgun.org"/>
-    <add key="MAIL_API_SENDER_FROM" value="Excited User" />
-    <add key="MAIL_API_SENDER_RECIPIENT" value="mailgun@sandboxaa7e13841b284969a8ae1cdf0d6392f9.mailgun.org" />
+    <add key="MAIL_API_URL" value="https://api.mailgun.net/v3"/>
+    <add key="MAIL_API_KEY" value="key-5740d1f076135f8320e17820ef169ec4"/>
+    <add key="MAIL_API_DOMAIN" value="inplay20.com"/>
+    <add key="MAIL_API_SENDER_FROM" value="Inplay20 Team" />
+    <add key="MAIL_API_SENDER_RECIPIENT" value="info@inplay20.com" />
     <!--Mass Mailing Service Settings Ends-->
   </appSettings>
   <system.web>
